When using ShowFilenamesInDetails you can also specify top # filenames to return.

-------------
Version 5.0.7
*************
Log file notifier changes
	Can append date to log file name
	Time format inside log file can be specified
Collector metrics exports
	Now can be enabled to log automatically
	Two formats available - CSV and XML
	QuickMon Service now enables collector state history(was always disabled in past)

-------------
Version 5.0.8
*************
Recent monitor pack menu item moved on main window
Fix tooltip for Open menu item
CollectorMetrics export to CSV
	Exclude NotAvailable state unless Include None/Disabled option is enabled
Added Quick toolbars for Collectors and Notifiers

-------------
Version 5.0.9
*************
Eventlog collector edit fixes and enhancements

--------------
Version 5.0.10
**************
Fix the RAW Xml config editor. Edited config wasn't saved if it started with "<?xml ..."

--------------
Version 5.1.0
**************
First version using .Net 4.5.2 (which is the oldest supported .Net at this time)
Added Jumplist shortcuts - Shortcuts available on right-click on the Windows Taskbar.

--------------
Version 5.1.1
**************
Fix to Web Service collector to display actual value used for testing alert

--------------
Version 5.1.2
**************
Add option to 'not check' URL on exit(ok button) when editing config to Ping, Performance counter and file system collectors.
Fix a bug that affected saving templates.

--------------
Version 5.1.3
**************
Adding template variables.
Allow using 'exit codes' in PowerShell collector.

--------------
Version 5.1.4
**************
Adding sticky main window location and size per Monitor pack.
Option to use either Frequent or Recent application jumplist (From Windows Taskbar)

--------------
Version 5.1.5
**************
Allow the use of the name 'localhost' in the PerfMon collector (maps to '.')
Added a few new template entries for creating new monitor packs