@@ -112,4 +112,5 @@ Option to use either Frequent or Recent application jumplist (From Windows Taskb
 Version 5.1.5
 **************
 Allow the use of the name 'localhost' in the PerfMon collector (maps to '.')
-Added a few new template entries for creating new monitor packs
+Adding a few new template entries for creating new monitor packs.
+Adding a new 'Global Collector history' viewer. 
